# twitch-native-ipc

./: .clang-format  .gitignore  .npmignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  LICENSE  README.md  package.json
cmakeUtils/: README.md  conanutils.cmake  doxypress.json.in  formatting.cmake  run_doxypress.sh.in  setup.cmake  tooling.cmake  unix.cmake  utilities.cmake  vsanalyzer.ruleset  windows.cmake  windows.manifest.in
cmakeUtils/conanprofiles/: windows_profile.txt.in
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
libnativeipc/: CMakeLists.txt
libnativeipc/include/nativeipc/: ConnectionExports.h  ConnectionFactory.h  IConnection.h  IServerConnection.h
libnativeipc/src/: ClientConnection.cpp  ClientConnection.h  ConnectionBase.cpp  ConnectionBase.h  ConnectionExports.cpp  ConnectionFactory.cpp  ConnectionFactoryPrivate.h  ConnectionFactoryTCP.cpp  DeleteConstructors.h  IClientTransport.h  IServerTransport.h  ITransportBase.h  LogMacrosNoHandle.h  LogMacrosWithHandle.h  Message.h  OperationQueue.cpp  OperationQueue.h  Pipe-ClientTransport.cpp  Pipe-ClientTransport.h  Pipe-ServerTransport.cpp  Pipe-ServerTransport.h  ServerConnection.cpp  ServerConnection.h  ServerConnectionSingle.cpp  ServerConnectionSingle.h  TCP-ClientTransport.cpp  TCP-ClientTransport.h  TCP-ServerTransport.cpp  TCP-ServerTransport.h  Transport.h  UVClientTransport.cpp  UVClientTransport.h  UVServerTransport.cpp  UVServerTransport.h  UVTransportBase.cpp  UVTransportBase.h
libnativeipc/src/platform/win/: dllmain.cpp
tests/: CMakeLists.txt  ConnectionTests.cpp
